# alpkit

./: .editorconfig  .gitignore  Cargo.toml  README.adoc
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
alpkit/: Cargo.toml
alpkit/src/: apkbuild.rs  apkbuild.test.rs  dependency.rs  dependency.test.rs  lib.rs
alpkit/src/internal/: exit_status_error.rs  key_value_vec_map.rs  key_value_vec_map.test.rs  macros.rs  mod.rs  regex.rs  regex.test.rs  schema.rs  schema.test.rs  serde_key_value.rs  serde_key_value.test.rs  std_ext.rs  std_ext.test.rs  tar_ext.rs  tar_ext.test.rs  test_utils.rs  validators.rs
alpkit/src/package/: fileinfo.rs  fileinfo.test.rs  mod.rs  mod.test.rs  pkginfo.rs  pkginfo.test.rs
apk-inspect/: Cargo.toml
apk-inspect/src/: main.rs
fixtures/apk/: rssh-2.3.4-r3.apk
fixtures/aports/s6/: APKBUILD
fixtures/aports/sample/: APKBUILD
fixtures/tar/: apk.tar  device.tar
schema-gen/: Cargo.toml
schema-gen/src/: main.rs
