[package]
name = "alpkit"
version = "0.1.0-pre.2"
authors = ["Jakub Jirutka <jakub@jirutka.cz>"]
description = "A library for reading metadata from the APKv2 package format and APKBUILD."
repository = "https://github.com/jirutka/alpkit"
license = "MIT"
keywords = ["alpine", "alpine-linux", "apk", "apk-tools"]

edition = "2021"
rust-version = "1.65"  # Alpine 3.18+

[features]
default = ["flate2-rust"]
# Add support for generating JSON schema.
schema-gen = ["validate", "dep:schemars"]
# Add support for setting timeout for the APKBUILD interpretation.
shell-timeout = ["dep:process_control"]
# Add support for validation using the garde crate.
validate = ["dep:garde", "dep:once_cell", "dep:regex-lite"]
# Choose the flate2 backend. Note that flate2-rust and flate2-zlib
# (or flate2-zlib-ng) can be enabled at the same time - in that case,
# the latter is used.
flate2-rust = ["flate2/rust_backend"]
flate2-zlib = ["flate2/zlib"]
flate2-zlib-ng = ["flate2/zlib-ng"]

[dependencies]
base64 = "0.13"
bitmask-enum = "2.1"
field_names = "0.2"
flate2 = { version = "1.0", default-features = false }
garde = { version = "0.14.0", default-features = false, features = ["derive"], optional = true }
mass-cfg-attr = "0.2"
once_cell = { version = "1.0", optional = true }
process_control = { version = "4.0", optional = true }
regex-lite = { version = "0.1", optional = true }
# Due to https://github.com/serde-rs/serde/issues/2538
serde = { version = "1.0, < 1.0.172", features = ["derive"] }
schemars = { git = "https://github.com/jirutka/schemars.git", branch = "vec-of-str-num-validation", features = ["derive"], optional = true }
tar = { version = "0.4", default-features = false }
thiserror = "1.0"

[dev-dependencies]
assert-json-diff = "2.0"
assert2 = "0.3"
indoc = "1.0"
serde_json = "1.0"

[package.metadata.docs.rs]
features = ["base64", "shell-timeout", "validate"]
rustdoc-args = ["--cfg", "docsrs"]
